--- a/templates/templates/main-slidebar.html.twig
+++ b/templates/templates/main-slidebar.html.twig
@@ -33,15 +33,37 @@
             </a>
 
           </li>
-          <li class="nav-item">
+          {# <li class="nav-item">
             <a href="{{path('app_utilisateur')}}" class="nav-link">
               <i class="nav-icon fa fa-users"></i>
               <p>
                 Utilisateurs
               </p>
             </a>
+          </li> #}
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link ">
+              <i class="nav-icon fa fa-users"></i>
+              <p>
+                Utilisateurs
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{{path('app_utilisateur')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Liste</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Affectation</p>
+                </a>
+              </li>
+            </ul>
           </li>
-         
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
