--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -30,7 +30,13 @@
                          {{ form_row(form.no_mat, {label: 'N° Matricule'}) }}
                     </div>
                     <div class="form-group">
-                         {{ form_row(form.name, {label: 'Nom'}) }}
+                         {{ form_row(form.noms, {label: 'Noms'}) }}
+                    </div>
+                    <div class="form-group">
+                         {{ form_row(form.prenoms, {label: 'Prénoms'}) }}
+                    </div>
+                    <div class="form-group">
+                         {{ form_row(form.email, {label: 'Email'}) }}
                     </div>
                     <div class="form-group">
                          {{ form_row(form.roles, {label: 'Roles'}) }}
