--- a/templates/depart/new.html.twig
+++ b/templates/depart/new.html.twig
@@ -24,11 +24,21 @@ Rapport
                     <div class="form-group">
                          {{ form_row(form.numeroVol, {label: 'N° de vol'}) }}
                     </div>
-                    <div class="form-group">
-                         {{ form_row(form.datePrevue, {label: 'Date prévue'}) }}
+                    <div class="row">
+                        <div class="col-6 form-group">
+                            {{ form_row(form.debutService, {label: 'Début de Service'}) }}
+                        </div>
+                        <div class="col-6 form-group">
+                            {{ form_row(form.finService, {label: 'Fin de Service'}) }}
+                        </div>
                     </div>
-                    <div class="form-group">
-                         {{ form_row(form.dateVol, {label: 'Date vol'}) }}
+                    <div class="row">
+                        <div class=" col-6 form-group">
+                            {{ form_row(form.datePrevue, {label: 'Date prévue'}) }}
+                        </div>
+                        <div class="col-6 form-group">
+                            {{ form_row(form.dateVol, {label: 'Date vol'}) }}
+                        </div>
                     </div>
                     <div class="form-group">
                          {{ form_row(form.remarque, {label: 'Remarque'}) }}
