Ajout des éléments sur la bar de navigation

--- a/templates/templates/main-slidebar.html.twig
+++ b/templates/templates/main-slidebar.html.twig
@@ -23,16 +23,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
 
-          </li>
           {# <li class="nav-item">
             <a href="{{path('app_utilisateur')}}" class="nav-link">
               <i class="nav-icon fa fa-users"></i>
@@ -60,6 +51,70 @@
                 <a href="#" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Affectation</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link ">
+              <i class="nav-icon fa fa-users"></i>
+              <p>
+                Rapports
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{# {{path('app_utilisateur')}} #}#" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Arrivé</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href=" {{path('app_depart_index')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Départ</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+           <li class="nav-item has-treeview">
+            <a href="#" class="nav-link ">
+              <i class="nav-icon fa fa-users"></i>
+              <p>
+                Gestion des éléments
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href=" {{path('app_paf_new')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Paf</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href=" {{path('app_site_new')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Site</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href=" {{path('app_type_stock_new')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Type de Stock</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{{path('app_type_rapport_new')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Type de Rapport</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href=" {{path('app_visa_new')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Visa</p>
                 </a>
               </li>
             </ul>
