--- a/templates/stock/_form.html.twig
+++ b/templates/stock/_form.html.twig
@@ -1,4 +1,28 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div id="dynamic">
+            {{ form_rest(form) }}
+      </div>
+                        <div calss="form-group col-4 offset-4 ">
+                        <button type="button" class="btn btn-block btn-success btn-lg" data-toggle="modal" data-target="#modal-sm" >Enregistrer</button>
+                    </div>
+                    <div class="modal fade" id="modal-sm">
+                          <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h4 class="modal-title">Voulez vous vraiment enregistrer ?</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-footer justify-content-between">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                                <button type="submit" class="btn btn-primary">Oui</button>
+                              </div>
+                            </div>
+                            <!-- /.modal-content -->
+                          </div>
+                          <!-- /.modal-dialog -->
+                    </div>
+   {#  <button class="btn">{{ button_label|default('Save') }}</button> #}
 {{ form_end(form) }}
