--- a/templates/stock/achat.html.twig
+++ b/templates/stock/achat.html.twig
@@ -4,8 +4,7 @@
 Stock
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
+
 
 {% block body %}
 <section class="content">
@@ -14,27 +13,37 @@ Stock
             <!-- left column -->
             <div class="col-md-12">
                 <div class="card card-primary">
-                <div class="card-header">
-                    <h1 class="card-title">Entrée de nouveau materiel</h1>
-                </div>
-                <!-- /.card-header -->
-                <!-- form start -->
-                {{ form_start(form) }}
-                    <div class="card-body">
-                        <div class="form-group">
-                            {{ form_row(form.materiel, {label: 'Materiel','attr': {'class': 'form-control'} }) }}
+                        <div class="card-header">
+                            <h1 class="card-title">Emmagasiner un produit</h1>
                         </div>
-                        <div class="form-group">
-                            {{ form_row(form.entree, {label: 'Quantite'}) }}
+                        <div class="card-body">
+                            
+                            
+                            <!-- /.card-header -->
+                            <!-- form start -->
+                            {# {{ form_start(form) }}
+                                <div class="card-body">
+                                    <div class="form-group">
+                                        {{ form_row(form.materiel, {label: 'Materiel','attr': {'class': 'form-control'} }) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.unite, {label: "L'unité considéré"}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.entree, {label: 'Quantité'}) }}
+                                    </div>
+                                    
+                                    <div class="form-group">
+                                        {{ form_row(form.intitule, {label: 'Intitulé'}) }}
+                                    </div>
+                                    <!-- /.card-body -->
+                                    <div class="card-footer">
+                                        <button type="submit" class="btn btn-primary">Valider</button>
+                                    </div>
+                            {{ form_end(form) }} #}
+
+                            {{ include('stock/_form.html.twig') }}
                         </div>
-                        <div class="form-group">
-                            {{ form_row(form.intitule, {label: 'Intitulé'}) }}
-                        </div>
-                        <!-- /.card-body -->
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">Valider</button>
-                        </div>
-                {{ form_end(form) }}
                 </div>
             </div>
             <!-- /.card -->
@@ -43,5 +52,38 @@ Stock
 
 
 
+{% endblock %}
+{% block javascript %}
+<script>
+        $(document).on('change', '#stock_materiel',  function () {
+        let $field = $(this)
+        
+        //let $regionField = $('#appbundle_medecin_region')
+        let $tokenField = $('#stock__token')
+        let $form = $field.closest('form')
+        let mydata = {}
+        
+        
+        mydata[$field.attr('name')] = $field.val()
+        mydata[$tokenField.attr('name')]= $tokenField.val(),
+       //  console.log( mydata);
+        /*let target = '#' + $field.attr('id').replace('departement', 'ville').replace('region', 'departement')
+        // Les données à envoyer en Ajax
+        let data = {}
+        data[$regionField.attr('name')] = $regionField.val()
+        data[$field.attr('name')] = $field.val()*/
+        // On soumet les données
+        //console.log(mydata)
+        $.post($form.attr('action'), mydata).then(function (data) {
+            // On récupère le nouveau <select>
+            let $input = $(data).find("#dynamic")
+            console.log("lala")
+            // On remplace notre <select> actuel
+            //$(target).replaceWith($input)
+        })
+        })
+      
+
+</script>
 {% endblock %}
 
