--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Admin</title>
+  <title> 
+            {% block pageName %} 
+               
+            {% endblock %}
+  </title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -47,9 +51,7 @@
         <div class="row mb-2">
           <div class="col-sm-6">
             <h1 class="m-0 text-dark">
-            {% block pageName %} 
-               
-            {% endblock %}
+           
             </h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
