--- a/templates/templates/main-slidebar.html.twig
+++ b/templates/templates/main-slidebar.html.twig
@@ -119,6 +119,52 @@
               </li>
             </ul>
           </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link ">
+              <i class="nav-icon fa fa-users"></i>
+              <p>
+                Materiel
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{{path('app_materiel_index')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Liste</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{{path('app_materiel_nouveau')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Ajout</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link ">
+              <i class="nav-icon fa fa-users"></i>
+              <p>
+                Stock Materiel
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{{path('app_stock_choix')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Stockage</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{{path('app_approvisonnement')}}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Approvisionner Site</p>
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
